Fixed visual "snap" when expanding/collapsing side menu.
Also added "Guides" and "Reference" sub-headings.

--- a/assets/themes/default/static/css/style.css
+++ b/assets/themes/default/static/css/style.css
@@ -191,13 +191,16 @@ h1,
  width: 100%;
 }
 .nav-sidebar > li > a {
-	/*padding: 0 20px 0 14px;*/
 	padding: 0.3em;
 }
 
 .nav-inner > li > a {
-		font-size: 0.95em;
-		padding: 0.2em 0.4em;
+	font-size: 0.95em;
+	padding: 0.2em 0.4em;
+}
+
+.nav-inner:after {
+    padding-bottom: 0.3em;
 }
 .nav-toggle {
 	margin-left: -14px;
@@ -206,21 +209,22 @@ h1,
 	font-weight: bold;
 	color: #000000;
 }
-.nav-sidebar > li > h4 {
-	padding-left: 14px;
-	margin-bottom: 0px;
-	color: #000000;
+.nav-sidebar > li.heading {
+	padding: 9px 4.5px 4.5px 0;
+    left: -8px;
+	font-weight: bold;
+    font-size: 1.04em;
 }
-.nav-sidebar > li {
-	/*padding: 0px 5px 5px 10px;*/
+.nav-sidebar > li.heading-top {
+    padding-top: 0;
 }
+
 .nav-sidebar > li > ul {
 	/* padding: 0.3em 0 0.75em 0.4em; */
-	padding: 0 0 0.75em 0em;
+	padding: 0 0 0.0em 0.4em;
 	list-style: none;
 }
 .nav-sidebar > li > ul > li > ul {
-	/* padding-left: 20px; */
 	list-style: none;
 	margin: 2em 0 0 0 ;
 }
